@@ -3,8 +3,7 @@ package com.cc.library.util;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 
-import sun.misc.BASE64Encoder;
-
+import java.util.Base64;
 public class Md5Utils {
 
 	/**
@@ -16,9 +15,7 @@ public class Md5Utils {
 		try{
 			MessageDigest md = MessageDigest.getInstance("md5");
 			byte md5[] = md.digest(message.getBytes());
-			
-			BASE64Encoder encoder = new BASE64Encoder();
-			return encoder.encode(md5);
+			return  Base64.getEncoder().encodeToString(md5);
 		}catch(NoSuchAlgorithmException e){
 			throw new RuntimeException(e);
 		}
